# veggen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CommonGeometry.h  CubeGeometry.cpp  CubeGeometry.h  OrbitalCamera.cpp  OrbitalCamera.h  ShaderProgram.cpp  ShaderProgram.h  imgui.ini  main.cpp  pch.h  utils.cpp  utils.h
src/shaders/: DefaultShader.frag  DefaultShader.vert
